<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyMedicalRecord</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">My records</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Statistics</string>

    <string name="login_account">Account</string>
    <string name="login_password_hint">Password</string>
    <string name="login_account_hint">Please input account</string>
    <string name="login_login">Login</string>
    
    
    <string name="title_item_detail">Item Detail</string>
    
    
    <string name="register">Register</string>
    
    
    <string name="reg_name">Name</string>
    
    
    <string name="reg_password">Password</string>
    
    
    <string name="reg_birthday">Birthday</string>
    
    
    <string name="reg_birthday_btn">Select birthday</string>
    
    
    <string name="reg_baby_name">Baby name</string>
    
    
    <string name="reg_boy">Boy</string>
    
    
    <string name="reg_girl">Girl</string>
    
    
    <string name="reg_gender">Gender</string>
    
    
    <string name="add">Add</string>
    
    
    <string name="refresh">Refresh</string>
    
    
    <string name="date">Date</string>
    
    
    <string name="select_date">Select date</string>
    
    
    <string name="symptom_name">Symptom name</string>
    
    
    <string name="temperature">Temperature</string>
    
    
    <string name="hospital">Hospital</string>
    
    
    <string name="doctor">Doctor</string>
    
    
    <string name="cost">Cost</string>
    
    
    <string name="medicine">Medicine</string>
    
    
    <string name="diagnosis">Diagnosis</string>
    
    
    <string name="others">Others</string>
    
    <string name="ill_top_months">Peak months</string>
    <string name="num_monthly">按月份分布</string>
    <string name="num_illness">按疾病分布</string>
    <string name="which_year">2013</string>
    <string name="month">Month</string>
    <string name="number">Number</string>
    <string name="percentage">"Percentage "</string>
    <string name="top_name">Name</string>
    <string name="top_num">Number</string>
    <string name="delete">Delete</string>
</resources>
