<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_weight="3.0"
        android:background="@drawable/chart_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="-2.0dip"
            android:layout_marginTop="-1.0dip"
            android:background="@drawable/chart_back"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:layout_marginRight="-1.0dip"
                android:background="@drawable/today_new_add"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/trend_single_image_type"
                    android:layout_width="13.0dip"
                    android:layout_height="15.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.0dip"
                    android:background="@drawable/time_icon"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/which_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/which_year"
                    android:textColor="#ff848484"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/text_small" />
<!-- 
                <LinearLayout
                    android:id="@id/trend_view_hidestate"
                    android:layout_width="wrap_content"
                    android:layout_height="18.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.0dip"
                    android:background="@drawable/trend_chose_state" >

                    <TextView
                        android:id="@id/text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1.0dip"
                        android:gravity="center"
                        android:paddingLeft="7.0dip"
                        android:paddingRight="7.0dip"
                        android:textColor="#ffffffff"
                        android:textIsSelectable="true"
                        android:textSize="10.0sp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@id/trend_view_hidestate"
                    android:layout_width="wrap_content"
                    android:layout_height="18.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dip"
                    android:background="@drawable/trend_chose_state" >

                    <TextView
                        android:id="@id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1.0dip"
                        android:gravity="center"
                        android:paddingLeft="7.0dip"
                        android:paddingRight="7.0dip"
                        android:textColor="#ffffffff"
                        android:textIsSelectable="true"
                        android:textSize="10.0sp" />
                </RelativeLayout>
 -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="7.5dip"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="6.0dip"
                android:background="@drawable/line_bg"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/monthly_num_linear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trend_list_long"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_weight="4.0"
        android:background="@drawable/corners_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/trend_list_long"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/addapplistview_1"
                android:layout_width="fill_parent"
                android:layout_height="23.0dip"
                android:layout_marginLeft="-1.0dip"
                android:layout_marginRight="-2.0dip"
                android:layout_marginTop="-2.0dip"
                android:background="@drawable/table_title"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/table_title_textview"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/month" />

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0.0dip"
                    android:layout_weight="0.8" >

                    <TextView
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/number" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40.0dip"
                    android:layout_weight="1.0" >

                    <TextView
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/percentage" />
                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/monthly_listView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listback_view"
                android:cacheColorHint="#00000000"
                android:divider="@drawable/listview_divider"
                android:dividerHeight="0.5dip"
                android:listSelector="#00000000"
                android:scrollingCache="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>