<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffeeefef"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="180.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/chart_back"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="-2.0dip"
                android:background="@drawable/today_new_add"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/top_title_mark_type"
                    android:layout_width="13.0dip"
                    android:layout_height="13.0dip"
                    android:layout_marginLeft="6.0dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/new_users" />

                <TextView
                    android:id="@+id/top_title_mark_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="15.0dip"
                    android:layout_marginLeft="3.0dip"
                    android:gravity="center_vertical"
                    android:textColor="#ff999999"
                    android:textIsSelectable="true"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_pie"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="23.0dip"
                android:layout_marginLeft="-1.0dip"
                android:layout_marginRight="-2.0dip"
                android:layout_marginTop="-2.0dip"
                android:background="@drawable/table_title"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <TextView
                        android:id="@+id/top_type_2"
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textIsSelectable="false" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <TextView
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10.0dip"
                        android:gravity="center"
                        android:text="@string/top_name" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" >

                    <TextView
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10.0dip"
                        android:gravity="center"
                        android:text="@string/top_num" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30.0dip"
                    android:layout_weight="1.0" >

                    <TextView
                        style="@style/table_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/percentage" />
                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/top_listview_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-3.0dip"
                android:background="@drawable/listback_view"
                android:cacheColorHint="#00ffffff"
                android:divider="@drawable/listview_divider"
                android:dividerHeight="0.5dip"
                android:listSelector="@drawable/toplist_selector"
                android:scrollingCache="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>